--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
-*{
+* {
   margin: 0%;
   padding: 0%;
-  
+
 }
 
-body{
+body {
   background-color: rgb(0, 0, 33);
-  color:white;
+  color: white;
   font-family: "Poppins", serif;
 }
-nav{
+
+nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -17,30 +18,34 @@ nav{
   background-color: rgb(9, 9, 53);
 
 }
+
 nav ul {
   display: flex;
   justify-content: center;
 
 }
+
 nav ul li {
   list-style: none;
   margin: 0 23px;
 }
+
 nav ul li a {
   text-decoration: none;
   color: white;
 }
-nav ul li a:hover{
-  color:rgb(107, 107, 197);
+
+nav ul li a:hover {
+  color: rgb(107, 107, 197);
   font-size: 1.02rem;
   text-decoration: underline;
 }
 
-.left{
+.left {
   font-size: 1.5rem;
 }
 
-.firstsection{
+.firstsection {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -48,42 +53,112 @@ nav ul li a:hover{
 
 
 }
-.firstsection > div{
+
+.firstsection>div {
   width: 45%;
 }
 
-.leftsection{
+.leftsection {
   margin: 50px 20px;
   font-size: 3rem;
 
 }
-.purple{
+
+.purple {
   color: rgb(91, 91, 174);
 }
-#element{
+
+#element {
   color: rgb(91, 91, 174);
 
 }
 
-.rightsection img{
+.rightsection img {
   width: 100%;
 }
-hr{
+
+hr {
   border: 0;
   background-color: rgb(91, 91, 174);
   height: 1.2px;
   margin: 40px 84px;
 }
 
-.secondsection{
+.text-gray {
+  color: rgb(169, 211, 248);
+}
+
+.secondsection {
   max-width: 80vw;
   margin: auto;
   height: 80vh;
 }
-.secondsection h1{
+
+.secondsection h1 {
   color: rgb(91, 91, 174);
   font-size: 1.7rem;
 }
-.text-gray{
-  color: rgb(169, 211, 248);
+
+.secondsection .box {
+  background-color: white;
+  width: 73vw;
+  height: 2px;
+  margin: 56px 0;
+  display: flex;
+}
+
+.secondsection .vertical {
+  background-color: white;
+  width: 1px;
+  height: 75px;
+  margin: 0 95px;
+
+}
+
+.vertical-title {
+  position: relative;
+  top: 75px;
+  width: 150px;
+
+}
+
+.vertical-desc {
+  position: relative;
+  top: 75px;
+  width: 150px;
+  font-size: 9px;
+  color: gray;
+}
+
+footer{
+  background-color: rgb(9, 9, 53);
+
+}
+.footer{
+  display: flex;
+  padding: 23px 122px;
+  justify-content: space-evenly;
+}
+.footer ul{
+  list-style: none;
+}
+.footer >div{
+  width: 223px;
+}
+.footer-rights{
+  text-align: center;
+  color: gray;
+
+}
+.footer-rights a{
+  color: rgb(107, 107, 197);
+ 
+  
+}
+.footer-rights a:hover{
+  color: white;
+  font-size: 1.02rem;
+
+  
+  
 }
