--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ nav {
   align-items: center;
   height: 70px;
   background-color: rgb(9, 9, 53);
-
 }
 
 nav ul {
@@ -38,7 +37,7 @@ nav ul li a {
 nav ul li a:hover {
   color: rgb(107, 107, 197);
   font-size: 1.02rem;
-  text-decoration: underline;
+
 }
 
 .left {
@@ -51,17 +50,36 @@ nav ul li a:hover {
   align-items: center;
   margin: 40px;
 
-
 }
 
 .firstsection>div {
-  width: 45%;
+  width: 50%;
 }
 
 .leftsection {
   margin: 50px 20px;
-  font-size: 3rem;
+  font-size: 2.1rem;
 
+}
+.leftsection .buttons{
+  padding: 23px;
+ 
+}
+
+.leftsection .btn {
+  color: rgb(18, 18, 84);
+  background-color: rgb(55, 55, 136);
+  border: none;
+  border-radius: 3px;
+  padding: 6px;
+  margin: 3px;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.leftsection .btn:hover {
+  color: rgb(125, 183, 234);
+  font-size: 15.5px;
 }
 
 .purple {
@@ -74,7 +92,7 @@ nav ul li a:hover {
 }
 
 .rightsection img {
-  width: 100%;
+  width: 90%;
 }
 
 hr {
@@ -101,9 +119,9 @@ hr {
 
 .secondsection .box {
   background-color: white;
-  width: 73vw;
+  width: 80vw;
   height: 2px;
-  margin: 56px 0;
+  margin: 50px 0;
   display: flex;
 }
 
@@ -111,7 +129,7 @@ hr {
   background-color: white;
   width: 1px;
   height: 75px;
-  margin: 0 95px;
+  margin: 0 85px;
 
 }
 
@@ -130,35 +148,39 @@ hr {
   color: gray;
 }
 
-footer{
+footer {
   background-color: rgb(9, 9, 53);
 
 }
-.footer{
+
+.footer {
   display: flex;
   padding: 23px 122px;
   justify-content: space-evenly;
 }
-.footer ul{
+
+.footer ul {
   list-style: none;
 }
-.footer >div{
+
+.footer>div {
   width: 223px;
 }
-.footer-rights{
+
+.footer-rights {
   text-align: center;
   color: gray;
 
 }
-.footer-rights a{
+
+.footer-rights a {
   color: rgb(107, 107, 197);
- 
-  
+
+
 }
-.footer-rights a:hover{
+
+.footer-rights a:hover {
   color: white;
   font-size: 1.02rem;
 
-  
-  
 }
