--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * {
   margin: 0%;
   padding: 0%;
-
 }
 
 body {
@@ -14,8 +13,8 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 70px;
   background-color: rgb(9, 9, 53);
+  height: 80%;
 }
 
 nav ul {
@@ -26,7 +25,8 @@ nav ul {
 
 nav ul li {
   list-style: none;
-  margin: 0 23px;
+  margin: 0 15px;
+  font-size: 0.6rem;
 }
 
 nav ul li a {
@@ -36,12 +36,12 @@ nav ul li a {
 
 nav ul li a:hover {
   color: rgb(107, 107, 197);
-  font-size: 1.02rem;
+  font-size: 0.64rem;
 
 }
 
 .left {
-  font-size: 1.5rem;
+  font-size: 0.8rem;
 }
 
 .firstsection {
@@ -58,12 +58,13 @@ nav ul li a:hover {
 
 .leftsection {
   margin: 50px 20px;
-  font-size: 2.1rem;
+  font-size: 1.5rem;
 
 }
-.leftsection .buttons{
+
+.leftsection .buttons {
   padding: 23px;
- 
+
 }
 
 .leftsection .btn {
@@ -71,15 +72,15 @@ nav ul li a:hover {
   background-color: rgb(55, 55, 136);
   border: none;
   border-radius: 3px;
-  padding: 6px;
-  margin: 3px;
-  font-size: 15px;
+  padding: 3px;
+  margin: 2px;
+  font-size: 9px;
   cursor: pointer;
 }
 
 .leftsection .btn:hover {
   color: rgb(125, 183, 234);
-  font-size: 15.5px;
+  font-size: 9.3px;
 }
 
 .purple {
@@ -92,61 +93,17 @@ nav ul li a:hover {
 }
 
 .rightsection img {
-  width: 90%;
+  width: 80%;
 }
 
 hr {
   border: 0;
   background-color: rgb(91, 91, 174);
   height: 1.2px;
-  margin: 40px 84px;
+  margin: 30px 70px;
 }
 
-.text-gray {
-  color: rgb(169, 211, 248);
-}
 
-.secondsection {
-  max-width: 80vw;
-  margin: auto;
-  height: 80vh;
-}
-
-.secondsection h1 {
-  color: rgb(91, 91, 174);
-  font-size: 1.7rem;
-}
-
-.secondsection .box {
-  background-color: white;
-  width: 80vw;
-  height: 2px;
-  margin: 50px 0;
-  display: flex;
-}
-
-.secondsection .vertical {
-  background-color: white;
-  width: 1px;
-  height: 75px;
-  margin: 0 85px;
-
-}
-
-.vertical-title {
-  position: relative;
-  top: 75px;
-  width: 150px;
-
-}
-
-.vertical-desc {
-  position: relative;
-  top: 75px;
-  width: 150px;
-  font-size: 9px;
-  color: gray;
-}
 
 footer {
   background-color: rgb(9, 9, 53);
@@ -157,6 +114,7 @@ footer {
   display: flex;
   padding: 23px 122px;
   justify-content: space-evenly;
+  font-size: 0.5rem;
 }
 
 .footer ul {
@@ -168,12 +126,14 @@ footer {
 }
 
 .footer-rights {
+  font-size: 0.5rem;
   text-align: center;
   color: gray;
 
 }
 
 .footer-rights a {
+  font-size: 0.5rem;
   color: rgb(107, 107, 197);
 
 
@@ -181,6 +141,7 @@ footer {
 
 .footer-rights a:hover {
   color: white;
-  font-size: 1.02rem;
+  font-size: 0.54rem;
+
 
 }
